// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`textLineThroughWidth renders 0 1`] = `
Array [
  .c0 {
  text-line-through-width: 0;
}

<div
    className="c0"
  />,
  .c0 {
  text-line-through-width: 0;
}

<div
    className="c0"
  />,
  .c0 {
  text-line-through-width: 0;
}

<div
    className="c0"
  />,
  .c0 {
  text-line-through-width: 0;
}

<div
    className="c0"
  />,
]
`;

exports[`textLineThroughWidth renders function 1`] = `
Array [
  .c0 {
  text-line-through-width: hasnot;
}

<div
    className="c0"
  />,
  .c0 {
  text-line-through-width: has;
}

<div
    className="c0"
  />,
  .c0 {
  text-line-through-width: hasnot;
}

<div
    className="c0"
  />,
  .c0 {
  text-line-through-width: has;
}

<div
    className="c0"
  />,
]
`;

exports[`textLineThroughWidth renders invalid theme path 1`] = `
Array [
  .c0 {
  text-line-through-width: invalid.path.1;
}

<div
    className="c0"
  />,
  .c0 {
  text-line-through-width: invalid.path.1;
}

<div
    className="c0"
  />,
  .c0 {
  text-line-through-width: invalid.path.1;
}

<div
    className="c0"
  />,
  .c0 {
  text-line-through-width: invalid.path.1;
}

<div
    className="c0"
  />,
]
`;

exports[`textLineThroughWidth renders negative number 1`] = `
Array [
  .c0 {
  text-line-through-width: -54881;
}

<div
    className="c0"
  />,
  .c0 {
  text-line-through-width: -54881;
}

<div
    className="c0"
  />,
  .c0 {
  text-line-through-width: -42365;
}

<div
    className="c0"
  />,
  .c0 {
  text-line-through-width: -42365;
}

<div
    className="c0"
  />,
]
`;

exports[`textLineThroughWidth renders object [breakpoints + standard] 1`] = `
Array [
  .c0 {
  text-line-through-width: July;
}

@media screen and (min-width:November) {
  .c0 {
    text-line-through-width: August;
  }
}

@media screen and (min-width:November) {
  .c0 {
    text-line-through-width: September;
  }
}

@media screen and (min-width:November) {
  .c0 {
    text-line-through-width: November;
  }
}

@media screen and (min-width:August) {
  .c0 {
    text-line-through-width: August;
  }
}

@media screen and (min-width:November) {

}

@media screen and (min-width:November) {

}

@media screen and (min-width:November) {

}

@media screen and (min-width:August) {

}

<div
    className="c0"
  />,
  .c0 {
  text-line-through-width: July;
}

@media screen and (min-width:November) {
  .c0 {
    text-line-through-width: August;
  }
}

@media screen and (min-width:November) {
  .c0 {
    text-line-through-width: September;
  }
}

@media screen and (min-width:November) {
  .c0 {
    text-line-through-width: November;
  }
}

@media screen and (min-width:August) {
  .c0 {
    text-line-through-width: August;
  }
}

@media screen and (min-width:November) {

}

@media screen and (min-width:November) {

}

@media screen and (min-width:November) {

}

@media screen and (min-width:August) {

}

<div
    className="c0"
  />,
  .c0 {
  text-line-through-width: January;
}

@media screen and (min-width:November) {

}

@media screen and (min-width:November) {

}

@media screen and (min-width:November) {

}

@media screen and (min-width:August) {

}

@media screen and (min-width:November) {
  .c0 {
    text-line-through-width: December;
  }
}

@media screen and (min-width:November) {
  .c0 {
    text-line-through-width: April;
  }
}

@media screen and (min-width:November) {
  .c0 {
    text-line-through-width: May;
  }
}

@media screen and (min-width:August) {
  .c0 {
    text-line-through-width: June;
  }
}

<div
    className="c0"
  />,
  .c0 {
  text-line-through-width: January;
}

@media screen and (min-width:November) {

}

@media screen and (min-width:November) {

}

@media screen and (min-width:November) {

}

@media screen and (min-width:August) {

}

@media screen and (min-width:November) {
  .c0 {
    text-line-through-width: December;
  }
}

@media screen and (min-width:November) {
  .c0 {
    text-line-through-width: April;
  }
}

@media screen and (min-width:November) {
  .c0 {
    text-line-through-width: May;
  }
}

@media screen and (min-width:August) {
  .c0 {
    text-line-through-width: June;
  }
}

<div
    className="c0"
  />,
]
`;

exports[`textLineThroughWidth renders object [breakpoints] 1`] = `
Array [
  @media screen and (min-width:November) {
  .c0 {
    text-line-through-width: July;
  }
}

@media screen and (min-width:November) {
  .c0 {
    text-line-through-width: August;
  }
}

@media screen and (min-width:November) {
  .c0 {
    text-line-through-width: September;
  }
}

@media screen and (min-width:August) {
  .c0 {
    text-line-through-width: November;
  }
}

@media screen and (min-width:November) {

}

@media screen and (min-width:November) {

}

@media screen and (min-width:November) {

}

@media screen and (min-width:August) {

}

<div
    className="c0"
  />,
  @media screen and (min-width:November) {
  .c0 {
    text-line-through-width: July;
  }
}

@media screen and (min-width:November) {
  .c0 {
    text-line-through-width: August;
  }
}

@media screen and (min-width:November) {
  .c0 {
    text-line-through-width: September;
  }
}

@media screen and (min-width:August) {
  .c0 {
    text-line-through-width: November;
  }
}

@media screen and (min-width:November) {

}

@media screen and (min-width:November) {

}

@media screen and (min-width:November) {

}

@media screen and (min-width:August) {

}

<div
    className="c0"
  />,
  @media screen and (min-width:November) {

}

@media screen and (min-width:November) {

}

@media screen and (min-width:November) {

}

@media screen and (min-width:August) {

}

@media screen and (min-width:November) {
  .c0 {
    text-line-through-width: May;
  }
}

@media screen and (min-width:November) {
  .c0 {
    text-line-through-width: June;
  }
}

@media screen and (min-width:November) {
  .c0 {
    text-line-through-width: April;
  }
}

@media screen and (min-width:August) {
  .c0 {
    text-line-through-width: November;
  }
}

<div
    className="c0"
  />,
  @media screen and (min-width:November) {

}

@media screen and (min-width:November) {

}

@media screen and (min-width:November) {

}

@media screen and (min-width:August) {

}

@media screen and (min-width:November) {
  .c0 {
    text-line-through-width: May;
  }
}

@media screen and (min-width:November) {
  .c0 {
    text-line-through-width: June;
  }
}

@media screen and (min-width:November) {
  .c0 {
    text-line-through-width: April;
  }
}

@media screen and (min-width:August) {
  .c0 {
    text-line-through-width: November;
  }
}

<div
    className="c0"
  />,
]
`;

exports[`textLineThroughWidth renders object [mediaQueries + standart] 1`] = `
Array [
  .c0 {
  text-line-through-width: July;
}

@media May {
  .c0 {
    text-line-through-width: August;
  }
}

@media April {
  .c0 {
    text-line-through-width: September;
  }
}

@media January {
  .c0 {
    text-line-through-width: November;
  }
}

@media April {
  .c0 {
    text-line-through-width: August;
  }
}

@media June {
  .c0 {
    text-line-through-width: November;
  }
}

@media May {

}

@media April {

}

@media January {

}

@media April {

}

@media June {

}

<div
    className="c0"
  />,
  .c0 {
  text-line-through-width: July;
}

@media May {
  .c0 {
    text-line-through-width: August;
  }
}

@media April {
  .c0 {
    text-line-through-width: September;
  }
}

@media January {
  .c0 {
    text-line-through-width: November;
  }
}

@media April {
  .c0 {
    text-line-through-width: August;
  }
}

@media June {
  .c0 {
    text-line-through-width: November;
  }
}

@media May {

}

@media April {

}

@media January {

}

@media April {

}

@media June {

}

<div
    className="c0"
  />,
  .c0 {
  text-line-through-width: April;
}

@media May {

}

@media April {

}

@media January {

}

@media April {

}

@media June {

}

@media May {
  .c0 {
    text-line-through-width: November;
  }
}

@media April {
  .c0 {
    text-line-through-width: January;
  }
}

@media January {
  .c0 {
    text-line-through-width: December;
  }
}

@media April {
  .c0 {
    text-line-through-width: April;
  }
}

@media June {
  .c0 {
    text-line-through-width: May;
  }
}

<div
    className="c0"
  />,
  .c0 {
  text-line-through-width: April;
}

@media May {

}

@media April {

}

@media January {

}

@media April {

}

@media June {

}

@media May {
  .c0 {
    text-line-through-width: November;
  }
}

@media April {
  .c0 {
    text-line-through-width: January;
  }
}

@media January {
  .c0 {
    text-line-through-width: December;
  }
}

@media April {
  .c0 {
    text-line-through-width: April;
  }
}

@media June {
  .c0 {
    text-line-through-width: May;
  }
}

<div
    className="c0"
  />,
]
`;

exports[`textLineThroughWidth renders object [mediaQueries] 1`] = `
Array [
  @media May {
  .c0 {
    text-line-through-width: July;
  }
}

@media April {
  .c0 {
    text-line-through-width: August;
  }
}

@media January {
  .c0 {
    text-line-through-width: September;
  }
}

@media April {
  .c0 {
    text-line-through-width: November;
  }
}

@media June {
  .c0 {
    text-line-through-width: August;
  }
}

@media May {

}

@media April {

}

@media January {

}

@media April {

}

@media June {

}

<div
    className="c0"
  />,
  @media May {
  .c0 {
    text-line-through-width: July;
  }
}

@media April {
  .c0 {
    text-line-through-width: August;
  }
}

@media January {
  .c0 {
    text-line-through-width: September;
  }
}

@media April {
  .c0 {
    text-line-through-width: November;
  }
}

@media June {
  .c0 {
    text-line-through-width: August;
  }
}

@media May {

}

@media April {

}

@media January {

}

@media April {

}

@media June {

}

<div
    className="c0"
  />,
  @media May {

}

@media April {

}

@media January {

}

@media April {

}

@media June {

}

@media May {
  .c0 {
    text-line-through-width: January;
  }
}

@media April {
  .c0 {
    text-line-through-width: December;
  }
}

@media January {
  .c0 {
    text-line-through-width: April;
  }
}

@media April {
  .c0 {
    text-line-through-width: May;
  }
}

@media June {
  .c0 {
    text-line-through-width: June;
  }
}

<div
    className="c0"
  />,
  @media May {

}

@media April {

}

@media January {

}

@media April {

}

@media June {

}

@media May {
  .c0 {
    text-line-through-width: January;
  }
}

@media April {
  .c0 {
    text-line-through-width: December;
  }
}

@media January {
  .c0 {
    text-line-through-width: April;
  }
}

@media April {
  .c0 {
    text-line-through-width: May;
  }
}

@media June {
  .c0 {
    text-line-through-width: June;
  }
}

<div
    className="c0"
  />,
]
`;

exports[`textLineThroughWidth renders postitive number 1`] = `
Array [
  .c0 {
  text-line-through-width: 54881;
}

<div
    className="c0"
  />,
  .c0 {
  text-line-through-width: 54881;
}

<div
    className="c0"
  />,
  .c0 {
  text-line-through-width: 42365;
}

<div
    className="c0"
  />,
  .c0 {
  text-line-through-width: 42365;
}

<div
    className="c0"
  />,
]
`;

exports[`textLineThroughWidth renders string 1`] = `
Array [
  .c0 {
  text-line-through-width: July;
}

<div
    className="c0"
  />,
  .c0 {
  text-line-through-width: July;
}

<div
    className="c0"
  />,
  .c0 {
  text-line-through-width: June;
}

<div
    className="c0"
  />,
  .c0 {
  text-line-through-width: June;
}

<div
    className="c0"
  />,
]
`;

exports[`textLineThroughWidth renders undefined 1`] = `
Array [
  <div
    className=""
  />,
  <div
    className=""
  />,
  <div
    className=""
  />,
  <div
    className=""
  />,
]
`;

exports[`textLineThroughWidth renders valid theme path 1`] = `
Array [
  .c0 {
  text-line-through-width: DarkSlateBlue;
}

<div
    className="c0"
  />,
  .c0 {
  text-line-through-width: DarkSlateBlue;
}

<div
    className="c0"
  />,
  .c0 {
  text-line-through-width: DarkSlateBlue;
}

<div
    className="c0"
  />,
  .c0 {
  text-line-through-width: DarkSlateBlue;
}

<div
    className="c0"
  />,
]
`;
